Version 1.7 - June 4, 2011
==========================
- Added a simple configuration object for WSGIapplication, available in the
  config attribute. Extras modules that use configuration (i18n, jinja2,
  sessions) don't require app.config to be set manually anymore. Still, the
  `secret_key` key config for sessions, if not defined, will result in an
  exception.

- Deprecated webapp2_extras.config, replaced by the simpler app dict.

- Router no longer receives app on construction, for consistency with the
  config object. App is set as global before router is initialized.

- Fixed a bug in webapp2_extras.sessions that made it not save the session
  when it was empty (like when flashes are popped).

- Added standalone uri_for function, to be used in templates.


Version 1.6.3 - June 3, 2011
============================
- Added webap2_extras.local_app, with the WSGIApplication previously in
  webap2_extras.local. This allows using LocalProxy on App Engine, without
  actually monkeypatching the WSGI app for threaded environments.

- Route now raises exc.HTTPMethodNotAllowed if methods are set and the request
  method doesn't match.

- Router.default_matcher() now raises exc.HTTPNotFound if no route matches.


Version 1.6.2 - May 30, 2011
============================
- WSGIApplication.__call__ checks if the dispatcher didn't return None to
  accept the returned value as a response. Previously it checked if it was an
  instance of Response.

- To support returned response, RequestHandler.dispatch() returns the result of
  the dispatched method.

Version 1.6.1 - May 30, 2011
============================
- Fixed an indentation bug in webapp2_extras.users.

- Added back _to_utf8() to convert values for import_string() and urlunsplit().

- Added WSGIApplication.get_response(), a convenience for unit tests.


Version 1.6 - May 29, 2011
==========================
- Handlers registered in WSGIApplication.error_handlers can now also be a
  string to be lazily imported.
